--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ main p {
 input {
   display: block;
   font-family: "Libre Franklin", sans-serif;
-  margin: 0 auto 1em auto;
+  margin: 0 auto;
   padding: 0.75em 1em;
   width: 80%;
   max-width: 400px;
@@ -64,6 +64,16 @@ input[type="email"]::placeholder {
 
 input[type="email"]:focus::placeholder {
   color: transparent;
+}
+
+.error-message {
+  color: hsl(354, 100%, 66%);
+  font-size: 0.75rem;
+  font-weight: 600;
+  font-style: italic;
+  text-align: center;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
 }
 
 input[type="submit"] {
