--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 body {
   font-family: "Libre Franklin", sans-serif;
   font-size: 1.25rem;
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .highlight {
@@ -17,13 +20,13 @@ body {
 
 .container {
   width: 90%;
-  margin: 0 auto;
-  padding: 4em 0 2em 0;
+  margin: 4em 0 2em 0;
   text-align: center;
 }
 
 header img {
   width: 20%;
+  max-width: 85px;
   margin-bottom: 2em;
 }
 
@@ -44,7 +47,7 @@ input {
   display: block;
   font-family: "Libre Franklin", sans-serif;
   margin: 0 auto;
-  padding: 0.75em 1em;
+  padding: 1em;
   width: 80%;
   max-width: 400px;
   border: none;
@@ -53,13 +56,13 @@ input {
 
 input[type="email"] {
   border: 1px solid hsl(223, 100%, 88%);
-  color: hsl(223, 100%, 88%);
+  color: hsl(0, 0%, 59%);
   padding-left: 2em;
   outline: none;
 }
 
 input[type="email"]::placeholder {
-  color: hsl(223, 100%, 88%);
+  color: hsl(0, 0%, 59%);
 }
 
 input[type="email"]:focus::placeholder {
@@ -82,16 +85,17 @@ input[type="submit"] {
   color: white;
   box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.15);
   font-weight: 600;
-  margin-bottom: 6em;
+  margin-bottom: 4em;
 }
 
 input[type="submit"]:hover {
-  background-color: hsl(223, 100%, 88%);
+  opacity: 0.8;
 }
 
 main img {
   width: 100%;
-  margin-bottom: 10em;
+  max-width: 550px;
+  margin-bottom: 3em;
 }
 
 .social-links {
@@ -119,4 +123,47 @@ main img {
 footer p {
   font-size: 0.75rem;
   color: hsl(0, 0%, 59%);
+}
+
+@media (min-width: 1000px) {
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5em;
+  }
+
+  main p {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+
+  main img {
+    margin-bottom: 5em;
+  }
+
+  form {
+    display: flex;
+    justify-content: space-between;
+    width: 650px;
+    margin: 0 auto;
+  }
+
+  .wrapper {
+    width: 60%;
+  }
+
+  input[type="email"] {
+    align-self: flex-start;
+    width: 80%;
+    margin-right: 0;
+  }
+
+  .error-message {
+    text-align: left;
+    margin-left: 8em;
+  }
+
+  input[type="submit"] {
+    width: 25%;
+    margin-left: 1em;
+  }
 }
